Fix carousel height on mobile

--- a/front/src/styles/templates/_event.scss
+++ b/front/src/styles/templates/_event.scss
@@ -1,7 +1,6 @@
 .tkt_event {
   #event-carousel {
     width: $slider_width;
-    height: $slider_height;
     max-width: 100%;
     max-height: 100%;
     margin-bottom: 1.5rem;
